atompythonrun.log
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
  File "C:\Users\binns\Desktop\Pong\main.py", line 28
    gameState = "score"ob
                       ^^
SyntaxError: invalid syntax
  File "C:\Users\binns\Desktop\Pong\main.py", line 28
    gameState = "score"ob
                       ^^
SyntaxError: invalid syntax
  File "C:\Users\binns\Desktop\Pong\main.py", line 28
    gameState = "score"ob
                       ^^
SyntaxError: invalid syntax
  File "C:\Users\binns\Desktop\Pong\main.py", line 28
    gameState = "score"ob
                       ^^
SyntaxError: invalid syntax
  File "C:\Users\binns\Desktop\Pong\main.py", line 28
    gameState = "score"ob
                       ^^
SyntaxError: invalid syntax
  File "C:\Users\binns\Desktop\Pong\main.py", line 28
    gameState = "score"ob
                       ^^
SyntaxError: invalid syntax
  File "C:\Users\binns\Desktop\Pong\main.py", line 28
    gameState = "score"ob
                       ^^
SyntaxError: invalid syntax
  File "C:\Users\binns\Desktop\Pong\main.py", line 28
    gameState = "score"ob
                       ^^
SyntaxError: invalid syntax
  File "C:\Users\binns\Desktop\Pong\main.py", line 28
    gameState = "score"ob
                       ^^
SyntaxError: invalid syntax
  File "C:\Users\binns\Desktop\Pong\main.py", line 28
    gameState = "score"ob
                       ^^
SyntaxError: invalid syntax
  File "C:\Users\binns\Desktop\Pong\main.py", line 28
    gameState = "score"ob
                       ^^
SyntaxError: invalid syntax
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
